<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/room_number"
        android:text="@string/room_number"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_name"
        android:text="@string/course_name"
        android:layout_below="@+id/room_number"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/course_type"
        android:text="@string/course_type"
        android:layout_below="@id/course_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_name"
        android:text="@string/teacher_name"
        android:layout_below="@+id/course_type"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_website"
        android:text="@string/teacher_website"
        android:layout_below="@+id/teacher_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacher_office_hours"
        android:text="@string/teacher_office_hours"
        android:layout_below="@id/teacher_website"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>





</RelativeLayout>